<resources>
    <string name="app_name">OfficeReminder 2.0</string>
    <string name="start">Start App</string>
    <string name="begin">Start time:</string>
    <string name="end">End time:</string>
    <string name="disable_reminders">Disable reminders</string>
    <string name="enterTime">Press this text to select</string>
    <string name="start_time_is">Start time is %1$d hours %2$d minutes</string>
    <string name="end_time_is">End time is %1$d hours %2$d minutes</string>
    <string name="hours"> hours </string>
    <string name="minutes"> minutes</string>
    <string name="splachScreenName">Office Reminder</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="logIn">Login</string>
    <string name="settings">Settings</string>
    <string name="title_activity_profile_screen">ProfileScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="b_day">Birthday(mm/dd/yyyy)</string>
    <string name="sex">Sex</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="date_picker">Press text to select</string>
    <string name="check_box_log_in">Remember me</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="button_edit_profile_screen">Edit</string>
    <string name="button_save_profile_screen">Save</string>
    <string name="button_add_birthday">Add date</string>
    <string name="button_go_to_entertimeactivity">Back</string>
    <string name="button_add_start_time">Add start time</string>
    <string name="button_add_end_time">Add end time</string>
    <string name="action_log_out">Log out</string>
    <string name="text_view_you_are_sad">If you are sad, click</string>
    <string name="button_go_to_dogs_activity">Here</string>
</resources>
