<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:ignore="ExtraText"
    tools:context="filak.officereminder20.Activity.EditProfileScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/mBtnGoToEnterTimeActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_go_to_entertimeactivity"
                android:onClick="onClick"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/mIvProfileImage"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/beard" />

            <ImageView
                android:id="@+id/mask"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image" />

            <Button
                android:id="@+id/mBtnEditProfileScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/button_edit_profile_screen"
                android:onClick="onClick"
                tools:ignore="OnClick" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mTvFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/first_name"
                    android:textSize="@dimen/text_size_profile_screen"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/mTvLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/last_name"
                    android:textSize="@dimen/text_size_profile_screen"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/mTvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_profile_screen"
                    android:layout_marginTop="15dp"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_day"
                    android:textSize="@dimen/text_size_profile_screen" />

                <TextView
                    android:id="@+id/mTvBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text=""
                    android:textSize="@dimen/text_size_profile_screen" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textSize="@dimen/text_size_profile_screen" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/text_size_profile_screen"
                android:gravity="right"
                android:id="@+id/mTvSex"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/text_size_profile_screen"
            android:text="Description:"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_profile_screen"
            android:id="@+id/mTvDescription"
            android:text=""/>

    </LinearLayout>
</ScrollView>
