<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:ignore="ExtraText"
    tools:context="filak.officereminder20.Activity.EditProfileScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/beard"
                android:onClick="onclick"/>

            <ImageView
                android:id="@+id/mask"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image" />

            <Button
                android:id="@+id/mBtnSaveProfileScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_profile_screen"
                android:layout_gravity="right"
                android:onClick="onclick"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mEtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="First Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/mEtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Last Name"
                    android:ems="10"
                    android:hint="Last Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/mEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_day"
                    android:textSize="@dimen/text_size_profile_screen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mTvDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="right"
                    android:textSize="@dimen/text_size_profile_screen" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/mBtnDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:text="@string/button_add_birthday"
            android:onClick="onclick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textSize="@dimen/text_size_profile_screen" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/mRbSexMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex_male" />

                <RadioButton
                    android:id="@+id/mRbSexFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex_female" />
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/mEtDecription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Description"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>
